# BirdLog

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  demo.py  pyproject.toml
.streamlit/: config.toml
app_pipeline/: app.py
app_pipeline/lib/: enlaces.py  estados.py  orquestador.py  ui.py
dashboard/: __init__.py  app.py
dashboard/lib/: conexion.py  consultas.py  edicion.py  filtros.py  fotos.py  graficos.py  mapas.py  ui.py
dashboard/paginas/: 01_inicio.py  02_mapa_general.py  02_visitas.py  03_lindus.py  04_cajas_nido.py  08_edicion.py  (+4 more)
demo/: 01_inicio_lindus.txt  02_observaciones_lindus.txt  03_fin_lindus.txt  04_cebo_avispon.txt  05_caja_nido.txt  06_nido_rapaz.txt  07_mamiferos_puente.txt
docs/: BITACORA.md  DECISIONES.md  PLAN_APP_PIPELINE.md  PRINCIPIOS.md  Pruebas_pipeline_junio.md  REVISION_EXCEL_CLIENTE_V03.md  Revisar con GABI.md  SEGURIDAD.md  USO_APP_PIPELINE.md  USO_DASHBOARD.md  formato_plaud.md  modelo_datos.md
scripts/: BirdLog_Dashboard.desktop  BirdLog_Pipeline.desktop  abrir_app_pipeline.sh  abrir_dashboard.sh  importar_historico.py  insertar_historico.py
sql/: 002_esquema_v2.sql  003_esquema_v3.sql  004_observaciones_nidos_rapaces.sql
src/: conexion.py  config.py  diagnosticos.py  pipeline.py
tests/: test_app_pipeline_dashboard.py  test_app_pipeline_orquestador.py  test_app_pipeline_ui.py  test_backup_exportar.py  test_catalogos.py  test_config.py  test_dashboard_titulos.py  test_escritura.py  test_fotos.py  test_parser_plaud.py  test_parser_texto_estructurado.py  test_pipeline_errores.py  test_pipeline_lindus_order.py
(+34 files in other folders)
