[project]
name = "birdlog"
version = "0.1.0"
description = "Sistema interno para recoger, insertar y visualizar datos de fauna."
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client",
    "pandas",
    "pydantic",
    "python-dotenv",
    "supabase",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
